# Q2RTX

./: .gitignore  CMakeLists.txt  compile_shaders.bat
.basenac/: default.cfg  nac.fgd  nac.menu
.basenac/huds/: constants.inc  default.hud  readme.txt
.basenac/maps/: nac_reverb.bsp  nac_reverb.map  nac_spotlight.bsp  nac_spotlight.map
.basenac/materials/: axe.mat  basic.mat  fence.mat  fx.mat  lightning.mat  lights.mat  liquid.mat  models.mat  q1nac.mat  q2nac.mat
.basenac/models/items/ammo/nails/: nailbox.iqm  nailbox.md2
.basenac/models/items/ammo/shells/: shellbox_small.iqm  shellbox_small.md2
.basenac/models/items/armor/: armor.md2  armor.md3  armor_shard.iqm  armor_shard.md2  armorshard.pcx
.basenac/models/items/keys/gold_key/: gold_key.md2  gold_key.md3  silver_key.pcx  silver_key.tga
.basenac/models/monsters/fiend/: fiend.iqm
.basenac/models/monsters/knight/: knight.iqm
.basenac/models/monsters/vore/: vore.iqm  vore_ball.iqm  vore_ball_n.tga
.basenac/models/objects/explobox/: explobox.iqm  explobox.md2  explobox.pcx  explobox2.iqm  explobox2.md2  explobox2.md3  explobox2.pcx
.basenac/models/objects/nail/: nail.iqm
.basenac/models/proj/lightning/: skin.pcx  tris.md2
.basenac/models/weapons/g_bolt/: g_bolt.iqm  g_bolt.md3  g_bolt.pcx
.basenac/models/weapons/g_perf/: g_perf.iqm
.basenac/models/weapons/g_shotg/: g_shotg.iqm
.basenac/models/weapons/v_axe/: axe.iqm
.basenac/models/weapons/v_shotg/: v_shotg.iqm
basenac/: nac.cfg  nac.menu
basenac/materials/: emissive.mat  fence.mat  ground.mat  liquid.mat  metal.mat  models.mat  path.mat  q1nac.mat  rock.mat  solids.mat  tentacles.mat  wall.mat
basenac/models/monsters/fiend/: fiend.iqm  fiend.md2  fiend.pcx
basenac/models/monsters/knight/: knight.md2  knight.pcx
basenac/models/monsters/scrag/: scrag.iqm  scrag_slime.md3
basenac/models/monsters/vore/: vore.iqm  vore.md2  vore.pcx  vore_ball_light.tga
basenac/models/monsters/wyrm/: base.tga  wyrm_base.iqm  wyrm_base.md2
basenac/models/weapons/axe/: axe.iqm
basenac/models/weapons/v_axe/: axe.iqm
basenac/models/weapons/v_perf/: v_perf.iqm
basenac/models/weapons/v_shotg/: v_shotg.iqm
baseq2/maps/: boss2.cfg  default.cfg
baseq2/materials/: baseq2.mat
cmake/: compileShaders.cmake
doc/: client.md
inc/client/: client.h  input.h  keys.h  video.h
inc/client/sound/: sound.h
inc/common/: bsp.h  cmd.h  cmodel.h  common.h  cvar.h  error.h  files.h  msg.h  pmove.h  protocol.h  sizebuf.h  utils.h  zone.h
inc/common/net/: chan.h  net.h
inc/format/: bsp.h  md2.h  pcx.h  sp2.h
inc/refresh/: images.h  models.h  refresh.h
inc/server/: server.h
inc/shared/: assets.h  config.h  game.h  iqm.h  platform.h  shared.h
inc/system/: system.h
scripts/: compress_color_tga.py
setup/: setup.nsi  steam_setup.nsi
src/: CMakeLists.txt
src/basenac/: g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_ptrs.c  g_ptrs.h  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c  genptr.py  m_actor.c  m_berserk.c  m_boss2.c  m_boss3.c  m_boss31.c  m_boss32.c  m_brain.c  m_chick.c  m_flipper.c  m_float.c  m_flyer.c  m_gladiator.c  m_gunner.c  m_hover.c  m_infantry.c  m_insane.c  m_medic.c  m_move.c  (+10 more)
src/basenac/entities/: nac_env_reverb.c
src/basenac/monsters/: nac_enforcer.c  nac_fiend.c  nac_grunt.c  nac_knight.c  nac_monster.c  nac_monster.h  nac_scrag.c  nac_vore.c
src/basenac/weapons/: nac_axe.c  nac_blaster.c  nac_launch.c  nac_nailgun.c  nac_perf.c  nac_rocket.c  nac_shotgun.c  nac_sshotgun.c  nac_thunderbolt.c
src/baseq2/: g_items.c  g_local.h  g_main.c  g_misc.c  g_phys.c  g_ptrs.c  g_save.c  g_spawn.c  g_target.c  g_trigger.c  g_utils.c  p_client.c  p_weapon.c
src/client/: ascii.c  cin.c  client.h  console.c  crc.c  demo.c  download.c  effects.c  entities.c  http.c  input.c  keys.c  locs.c  main.c  parse.c  precache.c  predict.c  refresh.c  screen.c  system.c  tent.c  view.c
src/client/sound/: al.c  main.c  mem.c  ogg.c  sound.h
src/client/sound/qal/: fixed.c  fixed.h
src/client/ui/: demos.c  playerconfig.c  script.c  servers.c  ui.c
src/common/: bsp.c  cmd.c  cmodel.c  common.c  cvar.c  error.c  field.c  files.c  math.c  msg.c  pmove.c  sizebuf.c  tests.c  utils.c  zone.c
src/common/net/: chan.c  net.c  unix.h  win.h
src/refresh/: images.c  model_iqm.c  models.c
src/refresh/gl/: draw.c  hq2x.c  main.c  models.c  surf.c
src/refresh/vkpt/: bsp_mesh.c  draw.c  fog.c  freecam.c  god_rays.c  main.c  material.c  matrix.c  models.c  path_tracer.c  physical_sky.c  physical_sky.h  post_process.c  textures.c  tone_mapping.c  transparency.c  vertex_buffer.c  vkpt.h
src/refresh/vkpt/shader/: constants.h  direct_lighting.rgen  global_textures.h  global_ubo.h  indirect_lighting.rgen  light_lists.h  path_tracer_rgen.h  physical_sky.comp  physical_sky_space.comp  post_process.comp  primary_rays.rgen  reflect_refract.rgen  restir.h  sky.h  tone_mapping_apply.comp  utils.glsl  vertex_buffer.h
src/server/: commands.c  entities.c  game.c  init.c  main.c  save.c  send.c  server.h  user.c  world.c
src/shared/: iqm.c  shared.c
src/system/: system.c
src/system/res/: nacicon.xbm
src/unix/: hunk.c  system.c  tty.c
src/windows/: hunk.c  system.c
src/windows/res/: baseq2.rc  q2rtx.rc
tools/bspentityalias/: Program.cs  bspentityalias.csproj  bspentityalias.sln
tools/bspentityalias/Properties/: launchSettings.json
